--- a/style.css
+++ b/style.css
@@ -33,14 +33,30 @@ body {
   border: 1px solid black;
   color: black;
   display: inline-block;
+  margin-bottom: 2em;
   margin: 0 5px;
-  margin-bottom: 1em;
   overflow: hidden;
   padding-bottom: 0.33em;
   padding-left: 0.33em;
-  padding-top: 0.55em;
+  padding-top: 1.11em;
+  position: relative;
   transition-duration: 123ms;
-  width: 75%;
+  width: 80%;
+}
+
+.close-button {
+  background-color: black;
+  border-radius: 20%;
+  border: 1px solid black;
+  box-shadow: 5px 7px 8px rgba(67, 64, 64, 0.5);
+  color: rgb(231, 209, 209);
+  cursor: pointer;
+  font-size: large;
+  font-weight: 600;
+  position: absolute;
+  right: 5px;
+  text-align: center;
+  top: 5px;
 }
 
 #tab-list > li:hover {
