--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  background-color: black;
   margin-left: 2.5em;
   margin-right: 2.5em;
   font-size: 16px;
@@ -7,15 +8,24 @@ body {
   width: 600px;
 }
 
+h1 {
+  color: whitesmoke;
+}
+
+#tab-count-header {
+  color: whitesmoke;
+}
+
 #search {
+  background-color: #272525;
   border: 1px solid black;
+  color: whitesmoke;
   display: block;
   font-size: larger;
   height: 10%;
   line-height: 1;
   margin: 0 auto;
   padding: 10px;
-  /* width: 55%; */
 }
 
 #tab-list {
@@ -28,20 +38,23 @@ body {
 }
 
 #tab-list > li {
-  background-color: rgb(229, 221, 221);
+  background-color: rgb(47, 44, 44);
   border-radius: 5px;
   border: 1px solid black;
-  color: black;
   display: inline-block;
-  margin-bottom: 2em;
-  margin: 0 5px;
+  margin-top: 2em;
   overflow: hidden;
   padding-bottom: 0.33em;
   padding-left: 0.33em;
   padding-top: 1.78em;
   position: relative;
-  transition-duration: 123ms;
+  transition-duration: 333ms;
   width: 80%;
+}
+
+#tab-list > li:hover {
+  transform: translateX(7px) translateY(-8px);
+  box-shadow: 12px 7px 10px rgba(170, 167, 167, 0.5);
 }
 
 .close-button {
@@ -62,7 +75,7 @@ body {
 .active-button {
   background-color: black;
   border-radius: 20%;
-  border: 1px solid black;
+  border: 1px solid rgb(80, 74, 74);
   box-shadow: 5px 7px 8px rgba(67, 64, 64, 0.5);
   color: rgb(53, 207, 26);
   cursor: pointer;
@@ -74,14 +87,8 @@ body {
   top: 5px;
 }
 
-#tab-list > li:hover {
-  background-color: white;
-  box-shadow: 12px 7px 10px rgba(87, 84, 84, 0.5);
-  transform: translate(7px, -9px);
-}
-
 .tab-title {
-  color: #272525;
+  color: #e9dada;
   font-size: x-large;
   font-weight: bold;
 }
@@ -94,20 +101,20 @@ body {
 }
 
 .tab-url:link {
-  color: rgb(32, 32, 228);
+  color: rgb(9, 183, 241);
   font-weight: 500;
 }
 
 .tab-url:visited {
-  color: rgb(124, 48, 239);
+  color: rgb(144, 91, 222);
 }
 
 #copy-urls-btn {
-  background-color: #272727;
+  background-color: #a89e9e;
   border-radius: 5px;
   border: none;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-  color: #fff;
+  color: #060606;
   cursor: pointer;
   display: block;
   font-size: large;
